test/compile_errors/stage1/test/return_invalid_type_from_test.zig
test "example" { return 1; }

// return invalid type from test
//
// tmp.zig:1:25: error: expected type 'void', found 'comptime_int'
